# rasterizzatore

./: Cargo.toml
examples/: simple.rs
src/: canvas.rs  dump.rs  lib.rs  point.rs  rgba.rs
