[package]
name = "rasterizzatore"
version = "0.1.0"
edition = "2021"
authors = ["Tristan Gerritsen"]
license = "Apache-2.0"
description = "A fast CPU path rasterizer"
homepage = "https://github.com/usadson/rasterizzatore"

[features]
default = ["dump", "dump-colored"]
dump = []
dump-colored = ["dep:colored"]

[dependencies]
colored = { version = "*", optional = true }
